--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/muhammadkh4n/webcrawler-node#readme",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "esm": "^3.2.25",
     "puppeteer": "^4.0.0"
   }
